k8s/ingress.yml
# ingress-controller 설치 명령어
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.8.1/deploy/static/provider/aws/deploy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catch-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1 #첫번째 prefix제거 /jang 제거
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - "server.catch-crm.shop" #수정 필요
      secretName: catch-com-tls
  rules:
    - host: server.catch-crm.shop # 수정 필요
      http:
        paths:
          - path: /crm/(.*) #모든 url요청을 nginx-service로 라우팅 # 수정 필요
            pathType: Prefix
            backend:
              service:
                name: crm-service
                port:
                  number: 80
          - path: /event/(.*) #모든 url요청을 nginx-service로 라우팅 # 수정필요
            pathType: Prefix
            backend:
              service:
                name: event-service
                port:
                  number: 80
